--- a/src/index.css
+++ b/src/index.css
@@ -26,37 +26,24 @@ body {
   height: 40px;
   right: 300px;
   top: 48px;
-  /* width: 36px;
-  height: 48px; */
-  color: gray;
-}
-.profile-big-share-btn {
-  border: 2px dotted gray;
-  border-radius: 100%;
+  cursor: pointer;
 }
 
 .profile-small-share-btn {
   display: none;
-  border: 2px dotted gray;
-  border-radius: 100%;
 }
 .profile-img-container {
   position: relative;
   width: 88px;
   height: 88px;
   margin: auto;
+  cursor: pointer;
 }
 #profile__img {
-  /* background-color: black; */
-
-  /* opacity: 0.5; */
-  /* display: block; */
   padding: 0px;
   width: 100%;
   height: 100%;
   border-radius: 275px;
-  /* margin: auto; */
-  cursor: pointer;
 }
 
 .profile-img-overlay {
@@ -77,20 +64,16 @@ body {
   opacity: 0.5;
 }
 
-.profile-img-overlay:hover {
-  /* background-color: blue; */
-  /* opacity: 1; */
-}
 .camera-icon {
   cursor: pointer;
   position: absolute;
-  top: 24px;
+  top: 52px;
   left: 0;
   right: 0;
   bottom: 0;
   color: #fff;
   opacity: 0;
-  /* z-index: 99; */
+  font-size: 28px;
 }
 .camera-icon:hover {
   opacity: 1;
@@ -102,6 +85,9 @@ body {
   line-height: 30px;
   margin-top: 1rem;
   margin-bottom: 2rem;
+}
+#slack {
+  display: none;
 }
 
 .profile-link-btn {
@@ -159,7 +145,7 @@ body {
   }
   .profile-share-btn {
     position: absolute;
-    right: 8px;
+    right: 32px;
   }
   .profile-big-share-btn {
     display: none;
