--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,195 @@ body {
 .profile-footer-logo {
   margin-bottom: 16px;
 }
+.contact-page {
+  /* text-align: center; */
+}
+.contact-title {
+  /* width: 640px;
+  display: block;
+  margin: auto;
+  text-align: left; */
+}
+.contact-form {
+}
+.contact-name {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.contact-name-left {
+  width: 50%;
+}
+.contact-name-right {
+  width: 50%;
+}
+.contact-form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  /* text-align: left; */
+  width: 100%;
+}
+/* .contact-form-group h3 {
+  text-align: left;
+} */
+.contact-form-group-email {
+  /* text-align: left; */
+  width: 100%;
+  margin-left: auto;
+}
+.contact-form-group-message {
+  /* text-align: left; */
+  width: 100%;
+  margin-left: auto;
+}
+
+/* contact-form */
+form {
+  /* background: rgba(27, 31, 34, 0.8); */
+  width: 640px;
+  margin: 50px auto;
+  max-width: 97%;
+  border-radius: 4px;
+  padding: 55px 30px;
+  text-align: left;
+  color: #344054;
+}
+
+form .contact-title {
+  margin-bottom: 48px;
+  text-align: left;
+}
+form .contact-title h4 {
+  font-weight: 200;
+}
+form .half {
+  display: flex;
+  justify-content: space-between;
+}
+
+form .half .item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  width: 48%;
+}
+
+form .item label {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 16px;
+  color: #344054;
+}
+
+form .half .item input {
+  border-radius: 4px;
+  border: 1px solid #d0d5dd;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+
+form .full input {
+  border-radius: 4px;
+  border: 1px solid #d0d5dd;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+
+form .full {
+  margin-bottom: 24px;
+}
+
+form .full textarea {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #d0d5dd;
+  outline: 0;
+  padding: 12px 16px;
+  width: 100%;
+  height: 200px;
+  font-size: 16px;
+  resize: none;
+}
+
+form .action {
+  margin-bottom: 32px;
+}
+
+form .action input {
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  height: 48px;
+  outline: 0;
+  border: none;
+  padding: 12px, 20px, 12px, 20px;
+  margin-right: 10px;
+}
+
+form .action input[type="submit"] {
+  background: #1570ef;
+  color: #ffffff;
+  width: 100%;
+}
+form .action input[type="checkbox"] value {
+  color: #000;
+}
+
+form .icons a {
+  border: 1px solid white;
+  border-radius: 50%;
+  line-height: 36px;
+  text-align: center;
+  font-weight: 600;
+  width: 38px;
+  margin-right: 10px;
+}
+form .checkbox-container {
+  text-align: left;
+  margin-bottom: 32px;
+}
+form .checkbox-container label {
+  display: inline;
+  margin-left: 8px;
+}
+
+form .half .item input:focus,
+form .full textarea:focus {
+  background: rgba(255, 255, 255, 0.075);
+}
+
+@media (max-width: 480px) {
+  form .half {
+    flex-direction: column;
+  }
+  form .half .item {
+    width: 100%;
+  }
+  form .action {
+    display: flex;
+    flex-direction: column;
+  }
+  form .action input {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+}
 
 @media screen and (max-width: 950px) {
   .profile-share-btn {
